fix uneven line

--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ button{
   position: absolute;
   z-index: 2;
   width: 100%;
-  border-top: 1px solid white;
+  border-top: 5px solid white;
 }
 
 .rollingEffect {
